examples/failing/LeadingZeros2.purs
module Main where

x = 00.1